Monday smol feedbacks

--- a/src/components/sections/Instructions/style.module.scss
+++ b/src/components/sections/Instructions/style.module.scss
@@ -1,8 +1,8 @@
 @import '../../../styles/imports/index.scss';
 
 .section {
-  background: $color-black;
-  color: $color-blue--light;
+  background: $color-blue;
+  color: $color-white;
   padding: 26vh 0 18vh;
 }
 
