--- a/src/components/schools/sections/Hero/style.module.scss
+++ b/src/components/schools/sections/Hero/style.module.scss
@@ -80,7 +80,7 @@
     &:nth-child(3) span { transition: top .3s ease-in-out 3.2s; }
     &:nth-child(4) span { transition: top .3s ease-in-out 3.3s; }
     &:nth-child(5) span { transition: top .3s ease-in-out 3.4s; }
-    &:last-child span { transition: top .3s ease-in-out 3.5s; }
+    &:nth-child(6) span { transition: top .3s ease-in-out 3.5s; }
   }
 }
 
