--- a/src/components/sections/Hero/style.module.scss
+++ b/src/components/sections/Hero/style.module.scss
@@ -79,7 +79,7 @@
     &:nth-child(2) span { transition: top .3s ease-in-out 3.1s; }
     &:nth-child(3) span { transition: top .3s ease-in-out 3.2s; }
     &:nth-child(4) span { transition: top .3s ease-in-out 3.3s; }
-    &:last-child span { transition: top .3s ease-in-out 3.4s; }
+    &:nth-child(5) span { transition: top .3s ease-in-out 3.4s; }
   }
 }
 
