--- a/src/components/sections/Inspiration/style.module.scss
+++ b/src/components/sections/Inspiration/style.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/imports/index.scss';
 
 .section {
-  background: $color-blue;
+  background: $color-black;
   color: $color-white;
   padding: 25vh 0;
 
@@ -11,6 +11,7 @@
 }
 
 .title {
+  color: $color-blue--light;
   margin-bottom: 21vh;
   max-width: 400px;
 
