--- a/src/components/schools/sections/Hero/style.module.scss
+++ b/src/components/schools/sections/Hero/style.module.scss
@@ -142,7 +142,7 @@
 
   .title {
     font-size: 24px;
-    transform: translateY(-100px);
+    transform: translateY(-290px) scale(.15);
   }
 
   .headline span,
