--- a/src/components/sections/Hero/style.module.scss
+++ b/src/components/sections/Hero/style.module.scss
@@ -15,12 +15,6 @@
   }
 }
 
-// .container {
-//   @include respond-to(mobile) {
-//     height: calc(100vh - 120px);
-//   }
-// }
-
 .wrapper {
   display: block;
   left: 0;
@@ -41,11 +35,9 @@
 .title {
   font-size: 23vw;
   left: 0;
-  margin-bottom: 517px;
   position: absolute;
   right: 0;
   text-align: center;
-  top: 0;
   transition: transform 1s ease-in-out 3s;
   z-index: 100;
 
@@ -141,9 +133,7 @@
   }
 
   .title {
-    font-size: 24px;
-    transform: translateY(-290px) scale(.15);
-
+    transform: translateY(-35vh) scale(.15);
   }
 
   .headline span,
