--- a/src/components/sections/Trust/style.module.scss
+++ b/src/components/sections/Trust/style.module.scss
@@ -54,14 +54,14 @@
 
   &:nth-child(2) {
     transition: opacity .3s ease-in-out .8s, transform .5s ease-in-out .9s;
-    width: 270px;
+    width: 260px;
   }
 
   p {
     background-color: $color-black;
     border-radius: 100px;
     padding: 20px 60px;
-    width: 270px;
+    width: 260px;
 
     @include respond-to(mobile) {
       padding: 20px 40px;
@@ -77,7 +77,8 @@
 
     p {
       background-color: $color-pink;
-      padding: 20px 40px;
+      padding: 20px 33px 20px 36px;
+      text-align: right;
 
       @include respond-to(mobile) {
         width: 260px;
@@ -117,18 +118,10 @@
 
   &:nth-child(4) {
     transition: opacity .3s ease-in-out 1.3s, transform .5s ease-in-out 1.3s;
-    width: 300px;
-
-    // @include respond-to(mobile) {
-    //   width: 280px;
-    // }
+    width: 285px;
 
     p {
-      width: 300px;
-
-      // @include respond-to(mobile) {
-      //   width: 280px;
-      // }
+      width: 285px;
     }
   }
 
