--- a/src/components/sections/Hero/style.module.scss
+++ b/src/components/sections/Hero/style.module.scss
@@ -134,7 +134,11 @@
   }
 
   .title {
-    transform: translateY(calc(-33vh + 50px)) scale(.45);
+    transform: translateY(-35vh) scale(.15);
+
+    @include respond-to(mobile) {
+      transform: translateY(calc(-33vh + 50px)) scale(.45);
+    }
   }
 
   .headline span,
