--- a/src/components/sections/Inspiration/style.module.scss
+++ b/src/components/sections/Inspiration/style.module.scss
@@ -41,6 +41,10 @@
   transition: height .2s ease-in-out;
   width: 480px;
 
+  @include respond-to(mobile) {
+    display: none;
+  }
+
   &.isVisible {
     height: 270px;
   }
