--- a/src/components/sections/Instructions/accordion.module.scss
+++ b/src/components/sections/Instructions/accordion.module.scss
@@ -13,10 +13,11 @@
 		color: $color-white;
 		font-size: 48px;
 		font-weight: 400;
-	}
 
-	&:not(:last-child) {
-		margin-bottom: 3px;
+		@include respond-to(mobile) {
+			font-size: 36px;
+			line-height: 1.2;
+		}
 	}
 
 	&[aria-expanded='true'] {
@@ -26,12 +27,27 @@
 
 		.label {
 			color: $color-white;
-			font-size: 48px;
 			font-weight: 400;
 
 			&:before {
-			transform: rotate(0deg);
+				transform: rotate(0deg);
 			}
+		}
+	}
+
+	&:first-child .text + div {
+		@include respond-to(mobile) {
+			height: 100vw;
+			margin-top: -10vw;
+			width: calc(100vw - 50px);
+		}
+	}
+	&:last-child .text + div {
+		@include respond-to(mobile) {
+			height: 100vw;
+			margin-top: -10vw;
+			right: 8vw;
+			width: calc(100vw - 50px);
 		}
 	}
 }
@@ -42,13 +58,16 @@
 	cursor: pointer;
 	display: block;
 	font-family: inherit;
-	font-size: 17px;
 	font-weight: 500;
 	padding: 59px 60px 59px 0;
 	position: relative;
 	text-align: left;
 	transition: color .2s linear;
 	width: 100%;
+
+	@include respond-to(mobile) {
+		padding: 45px 60px 45px 0;
+	}
 
 	&:focus {
 		outline: none;
@@ -64,6 +83,10 @@
 		right: 60px;
 		top: 50%;
 		width: 40px;
+
+		@include respond-to(mobile) {
+			right: 0;
+		}
 	}
 
 	&:before {
@@ -85,10 +108,22 @@
 	opacity: 0;
 	transition: opacity .3s linear .18s;
 
+	@include respond-to(mobile) {
+		display: block;
+	}
+
 	.text {
 		font-size: 36px;
 		line-height: 1.2;
 		max-width: 470px;
 		padding-bottom: 100px;
+
+		@include respond-to(mobile) {
+			font-size: 20px;
+			line-height: 30px;
+			max-width: unset;
+			padding-bottom: 50px;
+			width: 100%;
+		}
 	}
 }
