--- a/src/components/sections/Platform/style.module.scss
+++ b/src/components/sections/Platform/style.module.scss
@@ -42,7 +42,7 @@
 }
 
 .visual {
-  height: 37px;
+  height: 0;
   overflow: hidden;
   position: relative;
   transition: height .5s ease-in-out .4s;
