--- a/src/components/schools/sections/Platform/style.module.scss
+++ b/src/components/schools/sections/Platform/style.module.scss
@@ -33,7 +33,7 @@
 
 .textBody {
   font-weight: 400;
-  margin: 45px 0 60px;
+  margin-bottom: 60px;
 
   @include respond-to(mobile) {
     font-size: 22px;
@@ -48,7 +48,7 @@
 }
 
 .visual {
-  height: 37px;
+  height: 0;
   overflow: hidden;
   position: relative;
   transition: height .5s ease-in-out .4s;
