--- a/src/components/schools/sections/Difference/style.module.scss
+++ b/src/components/schools/sections/Difference/style.module.scss
@@ -26,6 +26,7 @@
 
 .shape {
   opacity: 0!important;
+  visibility: 'hidden';
   pointer-events: none;
   position: fixed;
   right: 23px;
@@ -65,6 +66,7 @@
   &:hover {
     + img {
       opacity: 1!important;
+      visibility: 'visible';
     }
 
     span:after {
