--- a/src/components/sections/Difference/style.module.scss
+++ b/src/components/sections/Difference/style.module.scss
@@ -26,6 +26,7 @@
 
 .image {
   opacity: 0!important;
+  visibility: hidden;
   pointer-events: none;
   position: fixed;
   right: 23px;
@@ -54,6 +55,7 @@
   &:hover {
     + img {
       opacity: 1!important;
+      visibility: visible;
     }
 
     .itemTitle:after {
